--- a/tg_bot/langs/en.yaml
+++ b/tg_bot/langs/en.yaml
@@ -10,7 +10,7 @@ set_chat_lang: "Great, {} it is from now on!"
 
 pm_start_text: |
    Hi {}, I'm {},
-   I am an Anime themed group management bot with some fun extras ;)
+   Aku Hanya Bot Yang Enggak Terlalu Berguna ಥ‿ಥ ;)
    
    I can do a variety of things, most common of em are:
    - Restrict users with *ban permissions*.
@@ -23,7 +23,7 @@ pm_start_text: |
    to be promoted with proper admin permissions to function properly. 
    Else I won't be able to function as said.
    
-   *Click on help to learn more!*
+   *Pencet Help broo!*
    
 grp_start_text: "Napaaaa eee."
 
